// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxItem /> help renders 1`] = `
<div
  class="field field--populated field--check field--checkbox"
>
  <input
    aria-labelledby="form-0_mock_7--label"
    class="field__input field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock_7"
    type="checkbox"
    value="100"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock_7"
    id="form-0_mock_7--label"
  >
    Example
    <span
      class="field__help field__help--populated field__help--check field__help--checkbox"
    >
      Help
    </span>
  </label>
</div>
`;

exports[`<CheckboxItem /> label renders 1`] = `
<div
  class="field field--populated field--check field--checkbox"
>
  <input
    aria-labelledby="form-0_mock_4--label"
    class="field__input field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock_4"
    type="checkbox"
    value="100"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock_4"
    id="form-0_mock_4--label"
  >
    Label
  </label>
</div>
`;

exports[`<CheckboxItem /> renders 1`] = `
<div
  class="field field--populated field--check field--checkbox"
>
  <input
    aria-labelledby="form-0_mock_0--label"
    class="field__input field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock_0"
    type="checkbox"
    value="100"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock_0"
    id="form-0_mock_0--label"
  >
    Example
  </label>
</div>
`;
